# PDF_Redact

./: .gitignore  LICENSE  README.md  app_main.py  build_dmg.sh  pyproject.toml  setup.py
src/pdf_redactor/: __init__.py  __main__.py  gui.py  redactor.py  web_gui.py
tests/: test_redactor.py
