[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-redactor"
version = "1.0.0"
description = "Permanently redact sensitive text from PDF documents — native macOS app"
requires-python = ">=3.10"
dependencies = [
    "PyMuPDF>=1.24.0,<2.0.0",
    "customtkinter>=5.0.0",
]

[project.scripts]
pdf-redactor = "pdf_redactor.__main__:main"

[project.gui-scripts]
pdf-redactor-gui = "pdf_redactor.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
